# intelligent-merge-resolver

./: .gitignore  .merge-resolver.yaml  LICENSE  README.md  package.json  requirements.txt
intelligent-merge-resolver/: .gitignore  .merge-resolver.yaml  TODO.md  install.js  package-lock.json  package.json  pyproject.toml  server.js
intelligent-merge-resolver/config/: default_preferences.yaml  reasoning_config.yaml
intelligent-merge-resolver/docs/: architecture.md  configuration.md  quickstart.md  troubleshooting.md
intelligent-merge-resolver/hooks/: install_hooks.py  post-merge  pre-merge-commit
intelligent-merge-resolver/src/analyzers/: ocr_analyzer.py
intelligent-merge-resolver/src/cli/: main.py
intelligent-merge-resolver/src/cli/utils/: config_loader.py
intelligent-merge-resolver/src/context/: codebase_manager.py  context_compressor.py  context_selector.py
intelligent-merge-resolver/src/core/: backup.py  conflict_analyzer.py  decision_engine.py  merge_detector.py  resolution.py
intelligent-merge-resolver/src/integrations/: gemini_client.py  git_integration.py  puppeteer_bridge.js
intelligent-merge-resolver/src/reasoning/: consistency_reasoning.py  contextual_reasoning.py  impact_reasoning.py  meta_reasoning.py  semantic_reasoning.py  visual_reasoning.py
intelligent-merge-resolver/tests/: test_config_loader.py  test_conflict_analyzer.py  test_git_integration.py  test_merge_detector.py  test_ocr_analyzer.py  test_resolution.py  test_ui_capture_wrapper.py
intelligent-merge-resolver/tests/python/: test_gemini_env_key.py
(+14 files in other folders)
